# UCL_IXN_Project-Azure_Sphere_IoT-ML

./: README.md  Room Capability Monitor.json
Azure_ML/: COMP0073_ML_model.ipynb  COMP0073_ML_model.py  people_in_supermarket_v2.csv  score.py
Jupyter_Notebook/: generate_data.ipynb  generate_data_v2.0.ipynb
MyProj_1.1/: CMakeLists.txt  app_manifest.json  main.c
MyProj_1.1/HardwareDefinitions/mt3620_rdb/: mt3620_rdb.json
MyProj_1.1/HardwareDefinitions/mt3620_rdb/inc/hw/: template_appliance.h
MyProj_1.1/VL53L1X/: VL53L1X.c  VL53L1X.h  VL53L1X_defines.h  i2c.c  i2c.h  utils.c  utils.h
MyProj_1.1/lib/: CMakeLists.txt  applibs_versions.h  azure_iot.c  azure_iot.h  config.c  config.h  device_twins.c  device_twins.h  direct_methods.c  direct_methods.h  eventloop_timer_utilities.c  eventloop_timer_utilities.h  exit_codes.h  inter_core.c  inter_core.h  peripheral_gpio.c  peripheral_gpio.h  terminate.c  terminate.h  timer.c  timer.h  utilities.c  utilities.h
between_IoTandML_v1.0/between_IoTandML_version1/: __init__.py
