add_library(MyLib 
            azure_iot.c
            config.c
            device_twins.c
            direct_methods.c
            eventloop_timer_utilities.c
            inter_core.c
            parson.c
            peripheral_gpio.c
            terminate.c
            timer.c
            utilities.c 
        )

